# lighthouse-scoring-calculator

./: README.md  pyproject.toml
src/: __init__.py  __main__.py  metrics.py  util.py
src/lighthouse_scoring_calculator/: __init__.py  calculator.py  example.py  lighthouse_scoring_calculator.py
src/lighthouse_scoring_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
