
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lighthouse-scoring-calculator"
version = "1.0.2"
description = "Calculate the Lighthouse scoring for a website"
readme = "README.md"
authors = [{ name = "Fabio Manz", email = "fabio.manz@t-online.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",

]
keywords = ["pagespeed", "lighthouse", "google", "web", "scoring", "calculator"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/fabiomanz/lighthouse-scoring-calculator"

[project.scripts]
lh_calculator = "__main__:main"